# tclgraphs

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  configure  configure.ac  pkgIndex.tcl.in
cmake/: FindTclGraphs.cmake
doc/: tclgraphs.n
generic/: common.c  edge.c  graph.c  graph.h  graphs.c  graphs.decls  graphs.h  graphsDecls.h  graphsInt.h  graphsStubInit.c  graphsStubLib.c  node.c  tclgraphs.c
tests/: 01-graph.test  02-node.test  03-edge.test  04-util.test  all.tcl  createtwographs.tcl  edge.test  graph.test  loadpackage.tcl  node.test
win/: .gitignore
win/MSVC2015/: .gitignore  README.md  graphs.vcxproj  graphsstub.vcxproj  tclgraphs.sln  tclgraphs.vcxproj
